# haskell-performance

./: Benchmark.hs  CHANGELOG.md  README.md  bench.html  cabal.project  generate-report.sh  haskell-performance.cabal
bench/: Bench.hs
